added user blocked functionality
